# qex

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  README.zh-CN.md  release-please-config.json
.claude/: CLAUDE.md
.github/workflows/: publish.yml  release-please.yml
crates/code-context-core/: Cargo.toml
crates/code-context-core/src/: ignore.rs  lib.rs
crates/code-context-core/src/chunk/: mod.rs
crates/code-context-core/src/chunk/languages/: c.rs  csharp.rs  go.rs  mod.rs  typescript.rs
crates/code-context-core/src/index/: mod.rs  storage.rs
crates/code-context-core/src/merkle/: snapshot.rs
crates/code-context-core/src/search/: bm25.rs  embedding.rs  hybrid.rs  query.rs  ranking.rs
crates/code-context-mcp/: Cargo.toml
crates/code-context-mcp/src/: config.rs  main.rs  server.rs  tools.rs
crates/qex-core/: Cargo.toml
crates/qex-core/src/: ignore.rs
crates/qex-core/src/chunk/: multi_language.rs  tree_sitter.rs
crates/qex-core/src/chunk/languages/: cpp.rs  java.rs  javascript.rs  markdown.rs  python.rs  rust_lang.rs
crates/qex-core/src/index/: mod.rs  storage.rs
crates/qex-core/src/merkle/: change_detector.rs  mod.rs
crates/qex-core/src/search/: dense.rs  embedding.rs  mod.rs  openai_embedder.rs
crates/qex-mcp/: Cargo.toml
crates/qex-mcp/src/: config.rs  main.rs  server.rs
docs/: index.html  site.config.js
docs/css/: style.css
docs/docs/: architecture.md  configuration.md  getting-started.md  indexing.md  installation.md  languages.md  mcp-tools.md  performance.md  search-pipeline.md
docs/js/: app.js  search.js  theme.js
scripts/: download-model.sh
tests/fixtures/: sample.py  sample.rs  sample.ts
