[workspace]
members = ["crates/qex-core", "crates/qex-mcp"]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/us/qex"

[workspace.dependencies]
# Core
tantivy = "0.22"
tree-sitter = "0.24"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
rayon = "1.10"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# MCP
rmcp = { version = "0.17", features = ["server", "transport-io"] }
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Dense vector search (workspace refs, non-optional here — optional in leaf crates)
ort = "2.0.0-rc.11"
ndarray = "0.17"
usearch = "2.24"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }

# HTTP (sync)
ureq = { version = "3", features = ["json"] }

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
