[package]
name = "qex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for QEX — semantic code search with BM25, tree-sitter chunking, and optional dense vectors"

[dependencies]
tantivy.workspace = true
tree-sitter.workspace = true
rusqlite.workspace = true
ignore.workspace = true
rayon.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
tempfile.workspace = true

# Tree-sitter language grammars
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-md = "0.3"

# Dense vector search (optional, behind "dense" feature)
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
usearch = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true, default-features = false, features = ["fancy-regex"] }

# OpenAI embedding API (optional, behind "openai" feature)
ureq = { workspace = true, optional = true }

[features]
default = []
dense = ["ort", "ndarray", "usearch", "tokenizers"]
openai = ["ureq"]

[dev-dependencies]
tempfile.workspace = true
