[package]
name = "qex-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qex"
path = "src/main.rs"

[dependencies]
qex-core = { path = "../qex-core", features = [] }
rmcp.workspace = true
schemars.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[features]
default = []
dense = ["qex-core/dense"]
