[package]
name = "qex-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight MCP server for semantic code search — BM25 + optional dense vectors + tree-sitter chunking"

[[bin]]
name = "qex"
path = "src/main.rs"

[dependencies]
qex-core = { path = "../qex-core", version = "0.0.1", features = [] }
rmcp.workspace = true
schemars.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[features]
default = []
dense = ["qex-core/dense"]
openai = ["qex-core/openai"]
